--- a/todos-app/src/app/features/todo/components/todo-list/todo-list.component.html
+++ b/todos-app/src/app/features/todo/components/todo-list/todo-list.component.html
@@ -1,5 +1,26 @@
-<ul>
-  @for(todo of todos$|async;track todo.id){
-    <li>{{todo.title}}</li>
-  }
-</ul>
+<table mat-table [dataSource]="todos$">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>Id</th>
+    <td mat-cell *matCellDef="let todo">{{ todo.id }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef>Title</th>
+    <td mat-cell *matCellDef="let todo">{{ todo.title }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="completed">
+    <th mat-header-cell *matHeaderCellDef>Completed</th>
+    <td mat-cell *matCellDef="let todo">{{ todo.completed }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="chkCompleted">
+    <th mat-header-cell *matHeaderCellDef>chkCompleted</th>
+    <td mat-cell *matCellDef="let todo">
+      <mat-checkbox [checked]="todo.completed"></mat-checkbox>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
