--- a/todos-app/src/app/features/todo/components/todo-list/todo-list.component.html
+++ b/todos-app/src/app/features/todo/components/todo-list/todo-list.component.html
@@ -17,7 +17,14 @@
   <ng-container matColumnDef="chkCompleted">
     <th mat-header-cell *matHeaderCellDef>chkCompleted</th>
     <td mat-cell *matCellDef="let todo">
-      <mat-checkbox [checked]="todo.completed"></mat-checkbox>
+      <mat-checkbox [(ngModel)]="todo.completed"></mat-checkbox>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let todo">
+      <button mat-flat-button color="warn" (click)="delete(todo)">Delete</button>
     </td>
   </ng-container>
 
