--- a/todos-app/src/app/features/todo/components/todo-form/todo-form.component.html
+++ b/todos-app/src/app/features/todo/components/todo-form/todo-form.component.html
@@ -1,4 +1,4 @@
-<form #todoForm="ngForm">
+<form #todoForm="ngForm" (ngSubmit)="submitTodo()">
 
   <mat-form-field>
     <mat-label>Title</mat-label>
